--- a/src/output.css
+++ b/src/output.css
@@ -590,6 +590,14 @@ video {
   top: 2rem;
 }
 
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+
 .mx-24 {
   margin-left: 6rem;
   margin-right: 6rem;
@@ -610,11 +618,6 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.my-14 {
-  margin-top: 3.5rem;
-  margin-bottom: 3.5rem;
-}
-
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -628,11 +631,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 .mb-3 {
@@ -667,6 +665,10 @@ video {
   margin-right: 1.5rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -679,28 +681,16 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .h-2\/4 {
   height: 50%;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-20 {
-  height: 5rem;
 }
 
 .w-1\/3 {
@@ -719,8 +709,12 @@ video {
   width: 33.333333%;
 }
 
-.w-32 {
-  width: 8rem;
+.w-20 {
+  width: 5rem;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-4\/12 {
@@ -747,20 +741,12 @@ video {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-24 {
-  width: 6rem;
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -795,12 +781,8 @@ video {
   gap: 0.75rem;
 }
 
-.self-center {
-  align-self: center;
-}
-
-.rounded-\[200\%\] {
-  border-radius: 200%;
+.gap-8 {
+  gap: 2rem;
 }
 
 .rounded-md {
@@ -811,12 +793,8 @@ video {
   border-width: 1px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
-.border-2 {
-  border-width: 2px;
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-gray-300 {
@@ -824,14 +802,9 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-gray-900 {
+.border-gray-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(17 24 39 / var(--tw-border-opacity));
-}
-
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .bg-bannerBrown {
@@ -845,6 +818,10 @@ video {
 .bg-coursesBg {
   --tw-bg-opacity: 1;
   background-color: rgb(107 44 145 / var(--tw-bg-opacity));
+}
+
+.bg-footerBG {
+  background-color: 1D1D1D;
 }
 
 .bg-heroButton {
@@ -871,10 +848,6 @@ video {
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .px-2 {
@@ -927,18 +900,20 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
 .pr-5 {
   padding-right: 1.25rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .pt-5 {
@@ -988,10 +963,6 @@ video {
   line-height: 1.75rem;
 }
 
-.font-extrabold {
-  font-weight: 800;
-}
-
 .font-light {
   font-weight: 300;
 }
@@ -1014,6 +985,11 @@ video {
   color: FFC983;
 }
 
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1022,6 +998,11 @@ video {
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1033,14 +1014,10 @@ video {
   text-decoration-line: underline;
 }
 
-.opacity-40 {
-  opacity: 0.4;
+.opacity-80 {
+  opacity: 0.8;
 }
 
-.opacity-55 {
-  opacity: 0.55;
-}
-
-.opacity-75 {
-  opacity: 0.75;
+.hover\:opacity-70:hover {
+  opacity: 0.7;
 }
